--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -213,7 +213,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         >
         <TextView
             android:layout_width="wrap_content"
@@ -225,8 +225,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SignIn"
-            android:textColor="@color/colorPrimary"
-            android:onClick="signIn">
+            android:textColor="@color/colorPrimary">
 
         </TextView>
 
