--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -133,7 +133,7 @@
             android:textSize="14dp"
             android:textStyle="bold"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_RevenuePerDay"
+            app:layout_constraintTop_toBottomOf="@id/tv_Order"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/D_Profit"
             android:background="@color/colorPrimary"
@@ -172,7 +172,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_weight="1"
             android:background="@color/colorPrimary"
-            app:layout_constraintTop_toBottomOf="@id/tv_RevenuePerDay"
+            app:layout_constraintTop_toBottomOf="@id/tv_AbandonedOrder"
             app:layout_constraintStart_toEndOf="@id/D_ProductSold"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="10dp"></TextView>
@@ -195,79 +195,79 @@
             app:layout_constraintTop_toBottomOf="@id/D_Profit"
             app:layout_constraintVertical_bias="0.0"></TextView>
 
-        <TextView
-            android:id="@+id/D_OrderPerDay"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_weight="1"
-            android:text="Order Per Day"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_Order"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/D_RevenuePerDay"
-            android:background="@color/colorPrimary"
-            android:gravity="center"></TextView>
+<!--        <TextView-->
+<!--            android:id="@+id/D_OrderPerDay"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:layout_marginRight="5dp"-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            app:layout_constraintHorizontal_bias="0.5"-->
+<!--            app:layout_constraintHorizontal_weight="1"-->
+<!--            android:text="Order Per Day"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="14dp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/tv_Order"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toStartOf="@id/D_RevenuePerDay"-->
+<!--            android:background="@color/colorPrimary"-->
+<!--            android:gravity="center"></TextView>-->
 
-        <TextView
-            android:id="@+id/tv_OrderPerDay"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/tv_RevenuePerDay"
-            android:background="@color/colorPrimary"
-            android:gravity="center_horizontal"
-            android:text="12"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:layout_marginLeft="5dp"
-            android:textStyle="bold"
-            android:layout_marginRight="5dp"
-            app:layout_constraintTop_toBottomOf="@id/D_OrderPerDay"
-            tools:layout_editor_absoluteY="45dp"></TextView>
+<!--        <TextView-->
+<!--            android:id="@+id/tv_OrderPerDay"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:layout_weight="1"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toStartOf="@id/tv_RevenuePerDay"-->
+<!--            android:background="@color/colorPrimary"-->
+<!--            android:gravity="center_horizontal"-->
+<!--            android:text="12"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="14dp"-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_marginRight="5dp"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/D_OrderPerDay"-->
+<!--            tools:layout_editor_absoluteY="45dp"></TextView>-->
 
-        <TextView
-            android:id="@+id/D_RevenuePerDay"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Revenue Per Day"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="14dp"
-            android:gravity="center"
-            android:layout_marginRight="5dp"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_weight="1"
-            android:background="@color/colorPrimary"
-            app:layout_constraintTop_toBottomOf="@id/tv_AbandonedOrder"
-            app:layout_constraintStart_toEndOf="@id/D_OrderPerDay"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"></TextView>
-        <TextView
-            android:id="@+id/tv_RevenuePerDay"
-            android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:background="@color/colorPrimary"
-            android:gravity="center_horizontal"
-            android:text="10"
-            android:layout_marginRight="5dp"
-            android:textColor="@color/white"
-            android:textSize="14dp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="206dp"
-            tools:layout_editor_absoluteY="45dp"
-            app:layout_constraintTop_toBottomOf="@id/D_RevenuePerDay"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintStart_toEndOf="@id/tv_OrderPerDay"></TextView>
+<!--        <TextView-->
+<!--            android:id="@+id/D_RevenuePerDay"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Revenue Per Day"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textSize="14dp"-->
+<!--            android:gravity="center"-->
+<!--            android:layout_marginRight="5dp"-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            app:layout_constraintHorizontal_bias="0.5"-->
+<!--            app:layout_constraintHorizontal_weight="1"-->
+<!--            android:background="@color/colorPrimary"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/tv_AbandonedOrder"-->
+<!--            app:layout_constraintStart_toEndOf="@id/D_OrderPerDay"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            android:layout_marginTop="10dp"></TextView>-->
+<!--        <TextView-->
+<!--            android:id="@+id/tv_RevenuePerDay"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="60dp"-->
+<!--            android:background="@color/colorPrimary"-->
+<!--            android:gravity="center_horizontal"-->
+<!--            android:text="10"-->
+<!--            android:layout_marginRight="5dp"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="14dp"-->
+<!--            android:textStyle="bold"-->
+<!--            tools:layout_editor_absoluteX="206dp"-->
+<!--            tools:layout_editor_absoluteY="45dp"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/D_RevenuePerDay"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            app:layout_constraintStart_toEndOf="@id/tv_OrderPerDay"></TextView>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
