--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -16,7 +16,7 @@
             android:layout_height="35dp"
             android:background="@color/colorPrimary"
             android:gravity="center"
-            android:text="Total Sale : 1200"
+            android:text="Total Sale : "
             android:textColor="@color/white"
             android:textSize="14dp"
 
@@ -71,7 +71,7 @@
             app:layout_constraintEnd_toStartOf="@id/tv_AbandonedOrder"
             android:background="@color/colorPrimary"
             android:gravity="center_horizontal"
-            android:text="12"
+            android:text="0"
             android:textColor="@color/white"
             android:textSize="14dp"
             android:textStyle="bold"
@@ -105,7 +105,7 @@
             android:layout_height="60dp"
             android:background="@color/colorPrimary"
             android:gravity="center_horizontal"
-            android:text="10"
+            android:text="0"
             android:layout_marginRight="5dp"
             android:textColor="@color/white"
             android:textSize="14dp"
@@ -148,7 +148,7 @@
             android:layout_weight="1"
             android:background="@color/colorPrimary"
             android:gravity="center_horizontal"
-            android:text="12"
+            android:text="0"
             android:textColor="@color/white"
             android:textSize="14dp"
             android:textStyle="bold"
@@ -184,7 +184,7 @@
             android:layout_marginLeft="5dp"
             android:background="@color/colorPrimary"
             android:gravity="center_horizontal"
-            android:text="10"
+            android:text="0"
             android:textColor="@color/white"
             android:textSize="14dp"
             android:layout_marginRight="5dp"
